# daily

./: .gitignore  README.md
workplace/: .gitignore  README.md  docker-compose.yml
workplace/backend/: .env.example  Dockerfile  pyproject.toml
workplace/backend/app/: __init__.py  discuss.py  doctor.py  main.py  reset.py  source_pack.py  tiering.py
workplace/backend/app/clients/: base.py  deepseek.py  mock.py
workplace/backend/app/core/: config.py
workplace/backend/app/db/: __init__.py  board_store.py  credential_store.py  engine.py  knowledge_module_store.py  knowledge_store.py  migrations.py  run_trace.py  seen_store.py  subscription_store.py  tracked_item_store.py
workplace/backend/app/ingestion/: __init__.py  domains.py  fetch_policy.py  hostile.py  html_render.py  html_static.py  html_structured.py  ingest.py  normalize.py  ocr.py  pdf.py  podcast.py  progress.py  result.py  router.py  text_source.py  transcribe.py  xiaohongshu.py  youtube.py  youtube_audio.py
workplace/backend/app/knowledge/: __init__.py  answer.py  semantic.py
workplace/backend/app/schemas/: __init__.py  codegen.py  models.py
workplace/backend/app/tracking/: __init__.py  backfill.py  dedup.py  digest.py  discover.py  domain_backoff.py  feed.py  fetch.py  health.py  homepage.py  platform.py  poll.py  refresh.py  runtime.py  scheduler.py  seed.py  source_smoke.py  summarize.py  worker.py
workplace/backend/tests/: README.md  conftest.py  fixtures_loader.py  http_cassette.py  netban.py  test_api_credentials.py  test_backfill.py  test_board.py  test_clients_mock.py  test_config.py  test_db.py  test_dedup.py  test_deepseek.py  test_digest_api.py  test_discover.py  test_doctor.py  test_domain_backoff.py  test_domains.py  test_feed.py  test_fetch_policy.py  test_health.py  test_homepage.py  test_hostile.py  test_html_render.py  test_html_static.py  test_html_structured.py  test_http_cassette.py  test_ingest.py  test_ingestion.py  test_ingestion_result.py  test_item_detail.py  test_item_discuss.py  test_knowledge_modules.py  test_knowledge_notes.py  test_knowledge_search.py  test_main.py  test_migrations_compat.py  test_network_ban.py  test_normalize.py  test_ocr.py  (+24 more)
workplace/backend/tests/cassettes/: caption_en.yaml  html_article.yaml  html_empty.yaml  sec_edgar_fulltext.yaml  sec_edgar_sample.yaml
workplace/backend/tests/fixtures/audio/: podcast_rss.xml  podcast_stub.json
workplace/backend/tests/fixtures/board/: board.json
workplace/backend/tests/fixtures/captions/: youtube_en.json  youtube_en.vtt  youtube_zh.json  youtube_zh.vtt  ytdlp_info.json
workplace/backend/tests/fixtures/digest/: daily_digest.json
workplace/backend/tests/fixtures/feeds/: atom_sample.xml  autodiscover.html  homepage_t0.html  homepage_t1.html  rdf_sample.xml  rss_sample.xml
workplace/backend/tests/fixtures/html/: cloudflare_challenge.html  empty_body.html  login_wall.html  og_description_only.html  paywall_bloomberg.html  render_required.html  static_article.html  structured_jsonld.html
workplace/backend/tests/fixtures/llm/: extraction_response.json  stance_response.json
workplace/backend/tests/fixtures/report/: verify_report.json
workplace/backend/tests/snapshots/: schema.json  verify_request.schema.json
workplace/frontend/: .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
workplace/frontend/e2e/: boards.spec.ts  digest.spec.ts  items.spec.ts  knowledge.spec.ts  screenshots.spec.ts  smoke.spec.ts  trace.spec.ts  tracking.spec.ts
workplace/frontend/src/__tests__/: boards-view.test.tsx  digest-view.test.tsx  error-boundary.test.tsx  item-detail.test.tsx  item-discuss.test.tsx  knowledge-page.test.tsx  knowledge-view.test.tsx  mock-provider.test.tsx  nav.test.tsx  onboarding.test.tsx  page.test.tsx  settings-view.test.tsx  shell.test.tsx  today-view.test.tsx  trace-view.test.tsx  tracked-items.test.tsx  tracking-view.test.tsx
workplace/frontend/src/__tests__/__snapshots__/: shell.test.tsx.snap
workplace/frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
workplace/frontend/src/app/boards/: page.tsx
workplace/frontend/src/app/digest/: page.tsx
workplace/frontend/src/app/items/[id]/: page.tsx
workplace/frontend/src/app/knowledge/: page.tsx
workplace/frontend/src/app/settings/: page.tsx
workplace/frontend/src/app/trace/: page.tsx
workplace/frontend/src/app/tracking/: page.tsx
workplace/frontend/src/components/: BoardsView.tsx  BrandLink.tsx  DigestView.tsx  ErrorBoundary.tsx  FooterNav.tsx  HelpButton.tsx  ItemDetailView.tsx  KnowledgeView.tsx  LangToggle.tsx  MockProvider.tsx  Nav.tsx  Onboarding.tsx  Reveal.tsx  SettingsView.tsx  Shell.tsx  TodayView.tsx  TraceView.tsx  TrackedItems.tsx  TrackingView.tsx
workplace/frontend/src/lib/: api.ts  i18n.tsx  messages.ts  msw-gate.ts
workplace/frontend/src/mocks/: fixtures.ts  handlers.ts
workplace/frontend/src/types/: contract.ts
workplace/scripts/: dev.sh  reset_local.py  serve.sh  test-all.sh
